# FigCombo

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
examples/: basic_example.py  nature_full_example.py  nature_mega_example.py  nature_style_example.py  quickstart_example.py
figcombo/: __init__.py  export.py  figure.py  preview.py  renderer.py  utils.py
figcombo/knowledge/: __init__.py  journal_specs.py  layout_templates.py  panel_constraints.py  validators.py
figcombo/layout/: __init__.py  grid.py  parser.py  types.py
figcombo/panels/: __init__.py  base.py  composite_panel.py  image_panel.py  inset_mixin.py  plot_panel.py  text_panel.py
figcombo/plot_types/: __init__.py  bioinformatics.py  imaging.py  molecular.py  statistics.py  survival.py
figcombo/styles/: __init__.py  manager.py
figcombo/styles/mplstyles/: cell.mplstyle  nature.mplstyle  science.mplstyle
web/: README.md  api.py  app.py  layout_parser.py
web/frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/frontend/src/: App.css  App.tsx  index.css
web/frontend/src/api/: client.ts
web/frontend/src/components/common/: Button.tsx  Card.tsx  Input.tsx  Modal.tsx  Select.tsx  Tabs.tsx  (+1 more)
web/frontend/src/hooks/: index.ts  useAutoSave.ts  useDragAndDrop.ts  useKeyboardShortcuts.ts
web/frontend/src/stores/: figureStore.ts  index.ts  previewStore.ts
web/frontend/src/types/: index.ts
web/frontend/src/utils/: helpers.ts
web/static/js/: main.js
web/templates/: index.html
(+9 files in other folders)
